# ha_ara_menu

./: flake.nix  pyproject.toml
ha_aramark_menu/: app.py
